Add javadoc to methods and classes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 name=Ceno
 description=If you're looking for top news, trending posts and funny stuff on the web, here our users pick them for you.
-welcome=Welcome to Ceno!
+user.created=Welcome to Ceno!
+user.not-created=Sorry! There was an error registering you
 search=Search for
 Exception.notFound=Page not found
 log-in=Log in
@@ -25,7 +26,7 @@ wrt-comment=Your opinion:
 send=Send
 avatar.change=Change avatar
 new-post=New post
-post.create= - Create new post
+post.create=- Create new post
 title=Title
 summary=Summary
 article=Article
@@ -36,6 +37,7 @@ create=Create
 card.read-more=Read more...
 not-allowed=You are not allowed to access this content
 post.created=Post created successfully
+post.not-created=Sorry! There was an error creating the post
 post.pin=Pin to home page
 post.delete=Delete the post
 post.report=Report the post
