Use ChoiceFormat to format plural strings nicely in message files

--- a/src/main/resources/messages/strings_fa.properties
+++ b/src/main/resources/messages/strings_fa.properties
@@ -13,6 +13,8 @@ funny=\u0633\u0631\u06AF\u0631\u0645\u06CC
 news=\u062E\u0628\u0631
 celebrities=\u0633\u0644\u0628\u0631\u062A\u06CC
 novice=\u062A\u0627\u0632\u0647\u200C\u06A9\u0627\u0631!
+title.search-result={0, choice, 0#\u0646\u062A\u0628\u062C\u0647\u200C\u0627\u06CC \u06CC\u0627\u0641\u062A \u0646\u0634\u062F!|1#\u06CC\u06A9 \u0646\u062A\u06CC\u062C\u0647 \u06CC\u0627\u0641\u062A \u0634\u062F|1<{0, number, integer} \u0646\u062A\u0628\u062C\u0647 \u06CC\u0627\u0641\u062A \u0634\u062F}
+title.post-comments={0, choice, 0#\u0647\u0646\u0648\u0632 \u0646\u0638\u0631\u06CC \u062B\u0628\u062A \u0646\u0634\u062F\u0647 \u0627\u0633\u062A.|1#\u06CC\u06A9 \u0646\u0638\u0631:|1<{0, number, integer} \u0646\u0638\u0631:}
 page-title.post=\u0633\u0647\u200C\u0646\u0648 - {0}
 page-title.error=\u0633\u0647\u200C\u0646\u0648 - \u062E\u0637\u0627!
 page-title.search=\u0633\u0647\u200C\u0646\u0648 - \u062C\u0633\u062A\u062C\u0648\u06CC \u00AB{0}\u00BB
@@ -27,7 +29,6 @@ prompt.log-in-part-1=\u0642\u0628\u0644\u0627 \u062B\u0628\u062A \u0646\u0627\u0
 prompt.log-in-part-2=\u0648\u0627\u0631\u062F \u0634\u0648\u06CC\u062F
 prompt.sign-up-part-1=\u062D\u0633\u0627\u0628 \u06A9\u0627\u0631\u0628\u0631\u06CC \u0646\u062F\u0627\u0631\u06CC\u062F\u061F
 prompt.sign-up-part-2=\u06CC\u06A9\u06CC \u0627\u06CC\u062C\u0627\u062F \u06A9\u0646\u06CC\u062F
-comments=\u0646\u0638\u0631
 wrt-comment=\u0646\u0638\u0631 \u0634\u0645\u0627:
 send=\u0627\u0631\u0633\u0627\u0644
 avatar.change=\u062A\u063A\u06CC\u06CC\u0631 \u0639\u06A9\u0633 \u06A9\u0627\u0631\u0628\u0631\u06CC
