--- a/src/main/resources/messages/strings_fa.properties
+++ b/src/main/resources/messages/strings_fa.properties
@@ -19,6 +19,8 @@ page-title.post=\u0633\u0647\u200C\u0646\u0648 - {0}
 page-title.error=\u0633\u0647\u200C\u0646\u0648 - \u062E\u0637\u0627!
 page-title.search=\u0633\u0647\u200C\u0646\u0648 - \u062C\u0633\u062A\u062C\u0648\u06CC \u00AB{0}\u00BB
 page-title.category=\u0633\u0647\u200C\u0646\u0648 - \u067E\u0633\u062A\u200C\u0647\u0627\u06CC {0}
+prompt.no-search-result=\u0646\u062A\u06CC\u062C\u0647\u200C\u0627\u06CC \u06CC\u0627\u0641\u062A \u0646\u0634\u062F!
+prompt.max-search-results-shown=(\u0641\u0642\u0637 {0, number, integer} \u0645\u0648\u0631\u062F \u0627\u0648\u0644 \u0646\u0645\u0627\u06CC\u0634 \u062F\u0627\u062F\u0647 \u0634\u062F\u0647 \u0627\u0633\u062A)
 prompt.already-taken=\u062A\u06A9\u0631\u0627\u0631\u06CC
 prompt.invalid=\u0646\u0627\u0645\u0639\u062A\u0628\u0631
 prompt.required=\u0627\u0644\u0632\u0627\u0645\u06CC
