--- a/src/main/resources/messages/strings_fa.properties
+++ b/src/main/resources/messages/strings_fa.properties
@@ -19,6 +19,7 @@ age.hours-old={0, number, integer} \u0633\u0627\u0639\u062A \u0642\u0628\u0644
 age.days-old={0, number, integer} \u0632\u0648\u0632 \u0642\u0628\u0644
 title.search-result={0, choice, 0#\u0646\u062A\u0628\u062C\u0647\u200C\u0627\u06CC \u06CC\u0627\u0641\u062A \u0646\u0634\u062F!|1#\u06CC\u06A9 \u0646\u062A\u06CC\u062C\u0647 \u06CC\u0627\u0641\u062A \u0634\u062F|1<{0, number, integer} \u0646\u062A\u0628\u062C\u0647 \u06CC\u0627\u0641\u062A \u0634\u062F}
 title.post-comments={0, choice, 0#\u0647\u0646\u0648\u0632 \u0646\u0638\u0631\u06CC \u062B\u0628\u062A \u0646\u0634\u062F\u0647 \u0627\u0633\u062A.|1#\u06CC\u06A9 \u0646\u0638\u0631:|1<{0, number, integer} \u0646\u0638\u0631:}
+title.hot-post={0, choice, 1#\u06CC\u06A9 \u0646\u0638\u0631|1<{0, number, integer} \u0646\u0638\u0631}
 page-title.post=\u0633\u0647\u200C\u0646\u0648 - {0}
 page-title.error=\u0633\u0647\u200C\u0646\u0648 - \u062E\u0637\u0627!
 page-title.search=\u0633\u0647\u200C\u0646\u0648 - \u062C\u0633\u062A\u062C\u0648\u06CC \u00AB{0}\u00BB
