Update a message string

--- a/src/main/resources/messages/strings_fa.properties
+++ b/src/main/resources/messages/strings_fa.properties
@@ -16,7 +16,7 @@ novice=\u062A\u0627\u0632\u0647\u200C\u06A9\u0627\u0631!
 age.seconds-old=\u0686\u0646\u062F \u062B\u0627\u0646\u06CC\u0647 \u0642\u0628\u0644
 age.minutes-old={0, number, integer} \u062F\u0642\u06CC\u0642\u0647 \u0642\u0628\u0644
 age.hours-old={0, number, integer} \u0633\u0627\u0639\u062A \u0642\u0628\u0644
-age.days-old={0, number, integer} \u0632\u0648\u0632 \u0642\u0628\u0644
+age.days-old={0, choice, 1#\u062F\u06CC\u0631\u0648\u0632|1<{0, number, integer} \u0631\u0648\u0632 \u0642\u0628\u0644}
 title.search-result={0, choice, 0#\u0646\u062A\u0628\u062C\u0647\u200C\u0627\u06CC \u06CC\u0627\u0641\u062A \u0646\u0634\u062F!|1#\u06CC\u06A9 \u0646\u062A\u06CC\u062C\u0647 \u06CC\u0627\u0641\u062A \u0634\u062F|1<{0, number, integer} \u0646\u062A\u0628\u062C\u0647 \u06CC\u0627\u0641\u062A \u0634\u062F}
 title.post-comments={0, choice, 0#\u0647\u0646\u0648\u0632 \u0646\u0638\u0631\u06CC \u062B\u0628\u062A \u0646\u0634\u062F\u0647 \u0627\u0633\u062A.|1#\u06CC\u06A9 \u0646\u0638\u0631:|1<{0, number, integer} \u0646\u0638\u0631:}
 title.hot-post={0, choice, 1#\u06CC\u06A9 \u0646\u0638\u0631|1<{0, number, integer} \u0646\u0638\u0631}
